# mliot-embeddedc-2026-hw

week01/: buoi1_PhamTuanKhoa.c
week02/: buoi2_PhamTuanKhoa.c
week03/: answer.txt  build_and_flash.bat
week04/: CMakeLists.txt  STM32F103C8Tx_FLASH.ld  Task_3.c  Task_4.c  Task_5.c  answer.txt  build_and_flash.bat
week04/Core/Src/: main.c
week04/cmake/stm32cubemx/: CMakeLists.txt
